--- a/_talks/2014-02-01-talk-2.md
+++ b/_talks/2014-02-01-talk-2.md
@@ -1,13 +1,26 @@
 ---
-title: "Talk 2 on Relevant Topic in Your Field"
+title: "Build e-commerce website database using both SQL and NoSQL"
 collection: talks
-type: "Talk"
-permalink: /talks/2014-02-01-talk-2
-venue: "London School of Testing"
-date: 2014-02-01
-location: "London, UK"
+# type: "Talk"
+permalink: /talks/Apr-2022-Project-2
+# venue: "London School of Testing"
+date: Apr 2022
+# location: "London, UK"
 ---
 
-[More information here](http://example2.com)
+Description: Business analysis of e-commerce system (Shopee) and draw database model diagram (Draw.io)
 
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
++ Model related to user (Relational Database - MySQL)
+<img src='/images/user_model.png' width='563' height='343'>
+
++ Model related to product (Document Database - MongoDB)
+<img src='/images/product_model.png' width='375' height='341'>
+
++ Model related to payment (Relational Database - MySQL)
+<img src='/images/payment_model.png' width='415' height='359'>
+
++ Model related to order and shipping (Key-value - Redis)
+<img src='/images/Order_model.png' width='436' height='229'>
+
+Source code: https://github.com/huynhhoanghuy/MS_database_project_ecommerce
+Reference: https://fabric.inc/blog/commerce/sql-nosql-ecommerce
