--- a/_talks/2013-03-01-tutorial-1.md
+++ b/_talks/2013-03-01-tutorial-1.md
@@ -1,13 +1,22 @@
 ---
-title: "Tutorial 1 on Relevant Topic in Your Field"
+title: "Text to Speech Synthesis"
 collection: talks
-type: "Tutorial"
-permalink: /talks/2013-03-01-tutorial-1
-venue: "UC-Berkeley Institute for Testing Science"
-date: 2013-03-01
-location: "Berkeley CA, USA"
+# type: "Tutorial"
+permalink: /talks/Dec 2022-Project-3
+# venue: "UC-Berkeley Institute for Testing Science"
+date: Dec 2022
+# location: "Berkeley CA, USA"
 ---
 
-[More information here](http://exampleurl.com)
+<!-- [More information here](http://exampleurl.com) -->
 
-This is a description of your tutorial, note the different field in type. This is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+Description: Text synthesized into a speech similar to the human voice. 
+
+There are two stages: text to intermediate representation (Mel spectrogram) and Mel Spec to raw waveform audio
+
+●	In the project, use HiFi-GAN for stage 2nd and display result.
+
+Source Code: https://github.com/ntrami/MS-Speech-Recognition
+
+Present video: https://youtu.be/h36sm7CYUVM
+
