--- a/_talks/2013-03-01-tutorial-1.md
+++ b/_talks/2013-03-01-tutorial-1.md
@@ -7,12 +7,11 @@ permalink: /talks/Dec 2022-Project-3
 date: Dec 2022
 # location: "Berkeley CA, USA"
 ---
-
 Description: Text synthesized into a speech similar to the human voice. 
 
 There are two stages: text to intermediate representation (Mel spectrogram) and Mel Spec to raw waveform audio
 
-●	In the project, use HiFi-GAN for stage 2nd and display result.
+In the project, use HiFi-GAN for stage 2nd and display result.
 
 Source Code: https://github.com/ntrami/MS-Speech-Recognition
 
