--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -17,5 +17,4 @@ All lab in Cloud Computing course at VNUHCM-University of Science include:
 
 ●	Programming in Cloud: MapReduce, Hadoop, Spark.
 
-Github: 
-https://github.com/ntrami/Cloud-Computing
+<p><a href="https://github.com/ntrami/Cloud-Computing">Github</a></p>
