--- a/_talks/2014-02-01-talk-2.md
+++ b/_talks/2014-02-01-talk-2.md
@@ -21,6 +21,7 @@ Description: Business analysis of e-commerce system (Shopee) and draw database m
 + Model related to order and shipping (Key-value - Redis)
 <img src='/images/Order_model.png' width='436' height='229'>
 
-Source code: https://github.com/huynhhoanghuy/MS_database_project_ecommerce
+<p><a href="https://github.com/huynhhoanghuy/MS_database_project_ecommerce">Source code</a></p>
+<p><a href="https://youtu.be/h36sm7CYUVM">Reference</a></p>
 
-Reference: https://fabric.inc/blog/commerce/sql-nosql-ecommerce
+
